syntax = "proto3";

package product;

service ProductService {
  rpc GetProductsByUserId (UserIdRequest) returns (ProductsList);

  rpc GetDataByProductId(IdRequest) returns(Data);

  rpc CreateProduct (CreateProductRequest) returns (Product);
  rpc FindAllProducts (Empty) returns (ProductsList);
  rpc FindOneProduct (IdRequest) returns (Product);
  rpc UpdateProduct (UpdateProductRequest) returns (Product);
  rpc DeleteProduct (IdRequest) returns (Empty);
}

message CreateProductRequest {
  string name = 1;
  float price = 2;
}
message UpdateProductRequest {
  string _id = 1;
  string name = 2;
  float price = 3;
}

message IdRequest {
  string id = 1;
}


message UserIdRequest {
  string _id = 1;
}

message Product {
  string _id = 1;
  string name = 2;
  float price = 3;
}

message ProductsList {
  repeated Product products = 1;
}

message User { 
  string _id = 1;
  string username = 2;
  string password = 3;
}

message UserList {
  repeated User users = 1;
}
message Data{
  Product product=1;
  UserList usersList=2;
}

message Empty {}