syntax = "proto3";

package user;

service UserService {
  rpc GetUsersByProductId (ProductId) returns (UserList);

  rpc GetDataByUserId (IdRequest) returns (Data);

  rpc CreateUser (CreateUserRequest) returns (User);
  rpc FindAllUsers (Empty) returns (UserList);
  rpc FindOneUser (IdRequest) returns (User);
  rpc UpdateUser (UpdateUserRequest) returns (User);
  rpc DeleteUser (IdRequest) returns (Empty);
}

message CreateUserRequest {
  string username = 2;
  string password = 3;
}
message UpdateUserRequest {
  string _id = 1;
  string username = 2;
  string password = 3;
}
message IdRequest {
  string id = 1;
}

message ProductId {
  string _id = 1;
}

message User { 
  string _id = 1;
  string username = 2;
  string password = 3;
}

message UserList {
  repeated User users = 1;
}

message Product {
  string _id = 1;
  string name = 2;
  float price = 3;
}

message ProductsList {
  repeated Product products = 1;
}

message Data{
  User user=1;
  ProductsList productsList=2;
}

message Empty {}